# template-tauri-vite-react-ts-tailwind

./: .gitignore  AGENTS.md  README.md  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
apps/tauri-app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri-app/src/: App.tsx
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: renameProject.ts  tsconfig.json
src-tauri/: tauri.conf.json
